--- a/index.html
+++ b/index.html
@@ -1,30 +1,34 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="Style.css">
-  </head>
-  <body>
-    <header>
-    </header>
-    <main>
-      <h1><span>&Bfr;&Re;</span>Bibi's Restaurant</h1>
-      <div class="form">
-        <form action="_GET">
-          <fieldset>
-            <legend>Sign In</legend>
-            <input type="text" placeholder="Username"><br><br>
-            <input type="password" placeholder="Password"><br><br>
-            <button type="submit">Sign-In</button>
-            <a href="#">Create Account</a>
-          </fieldset>
-        </form>
-      </div>
-    </main>
-    <footer>
-      
-    </footer>
-  </body>
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+  <header>
+  </header>
+  <main>
+    <h1>Bibi's Restaurant</h1>
+    <div class="form">
+      <form action="" method="">
+        <fieldset>
+          <legend>Sign In</legend>
+          <input type="text" placeholder="Username">
+          <input type="password" placeholder="Password">
+          <button type="submit">Sign-In</button>
+          <button>Create Account</button>
+        </fieldset>
+      </form>
+    </div>
+  </main>
+  <footer>
+
+  </footer>
+</body>
+
 </html>
